2005-03-21  Christian Reis <kiko@async.com.br>

	* applications.py: added gSmile

2005-03-16  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py: added 2.6.1 announcement

2005-03-15  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added PyMusique, Mapview and pyGPS

2005-03-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py (item): added 2.6.0 release (pachi)

2005-03-05  John Finlay  <finlay@moeraki.com>

	* newsitems.py: Announce PyGTK Reference 2.5.2

	* reference.src Update release info.

2005-03-03  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added Gajim

2005-01-23  Johan Dahlin  <johan@gnome.org>

        * newsitems.py (item): PyGTK 2.5.3

2005-02-21  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added Gazpacho and Sabayon

2005-02-04  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py (item): added item for Gazpacho 0.5.0

2005-01-28  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py : Gazpacho 0.4.0

	* feed.py: added support for authors in the news

	* applications.src: updated Sketch to Skencil (pachi)

2005-01-23  Johan Dahlin  <johan@gnome.org>

	* newsitems.py (item): PyGTK 2.5.3

2005-01-20  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py (item): added an entry about spanish tutorial release

	* tutorial.src: fixed typo about the version number

	* applications.src: added PyComicsViewer and XPN

2005-01-19  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* tutorial.src: updated version for spanish tutorial

2005-01-18  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py (item): some news about gnome-python 2.9.4 and gazpacho
	0.3.2

2004-01-14  Johan Dahlin  <johan@gnome.org>
	
	* newsitem.py: Add PyGTK 2.5.2

2004-12-23  Johan Dahlin  <johan@gnome.org>

	* applications.src: added Bittorrent.

2005-01-01  Christian Reis <kiko@async.com.br>

	* newsitems.py: First post! Err, I mean, adding updated news
	items for gnome-python releases.

2004-12-29  Christian Reis <kiko@async.com.br>
